<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KBANK-Generic</string>
    <string name="app_name_test">KBANK-Generic AutoTest</string>
    <string name="app_name_sandbox">KBANK-Generic SandBox</string>
    <string name="include_numpad_button_numpad_1">1</string>
    <string name="include_numpad_button_numpad_2">2</string>
    <string name="include_numpad_button_numpad_3">3</string>
    <string name="include_numpad_button_numpad_4">4</string>
    <string name="include_numpad_button_numpad_5">5</string>
    <string name="include_numpad_button_numpad_6">6</string>
    <string name="include_numpad_button_numpad_7">7</string>
    <string name="include_numpad_button_numpad_8">8</string>
    <string name="include_numpad_button_numpad_9">9</string>
    <string name="include_numpad_button_numpad_0">0</string>
    <string name="include_numpad_button_numpad_00">00</string>
    <string name="include_numpad_button_numpad_000">000</string>
    <string name="include_numpad_button_numpad_ok">OK</string>
    <string name="include_numpad_button_numpad_delete">Delete</string>
    <string name="include_numpad_button_numpad_cancel">Cancel</string>
    <string name="include_numpad_currency">Currency: %1$s</string>
    <string name="include_numpad_amount">0</string>
    <string name="include_numpad_image_edit">Pencil Icon</string>
    <string name="include_panpad_button_numpad_1">1</string>
    <string name="include_panpad_button_numpad_2">2</string>
    <string name="include_panpad_button_numpad_3">3</string>
    <string name="include_panpad_button_numpad_4">4</string>
    <string name="include_panpad_button_numpad_5">5</string>
    <string name="include_panpad_button_numpad_6">6</string>
    <string name="include_panpad_button_numpad_7">7</string>
    <string name="include_panpad_button_numpad_8">8</string>
    <string name="include_panpad_button_numpad_9">9</string>
    <string name="include_panpad_button_numpad_0">0</string>
    <string name="include_panpad_button_numpad_prev">Prev</string>
    <string name="include_panpad_button_numpad_next">Next</string>
    <string name="include_panpad_button_numpad_ok">OK</string>
    <string name="include_panpad_button_numpad_delete">Delete</string>
    <string name="include_panpad_button_numpad_cancel">Cancel</string>
    <string name="include_panpad_pan_and_expiry">Credit Card Number and Expiry</string>
    <string name="include_panpad_primaryaccountnumber_default">0000 0000 0000 0000 0000</string>
    <string name="include_panpad_expiry_default">MM/YY</string>
    <string name="include_panpad_image_edit">Pencil Icon</string>
    <string name="include_void_button_numpad_1">1</string>
    <string name="include_void_button_numpad_2">2</string>
    <string name="include_void_button_numpad_3">3</string>
    <string name="include_void_button_numpad_4">4</string>
    <string name="include_void_button_numpad_5">5</string>
    <string name="include_void_button_numpad_6">6</string>
    <string name="include_void_button_numpad_7">7</string>
    <string name="include_void_button_numpad_8">8</string>
    <string name="include_void_button_numpad_9">9</string>
    <string name="include_void_button_numpad_0">0</string>
    <string name="include_void_button_numpad_ok">OK</string>
    <string name="include_void_button_numpad_delete">Delete</string>
    <string name="include_void_button_numpad_cancel">Cancel</string>
    <string name="include_void_trace">Please Enter Original Trans NO.</string>
    <string name="include_void_trace_value"></string>
    <string name="include_void_image_edit">Pencil Icon</string>
    <string name="include_main_image_logo">Company Logo</string>
    <string name="include_main_bluetooth">Bluetooth: ON</string>
    <string name="include_main_bluetooth_off">Bluetooth: OFF</string>
    <string name="include_main_image_bluetooth">Bluetooth Icon</string>
    <string name="include_main_cellular">Cellular: ON</string>
    <string name="include_main_cellular_off">Cellular: OFF</string>
    <string name="include_main_image_cellular">Cellular Icon</string>
    <string name="include_main_image_contactus">Contact Us Icon</string>
    <string name="include_main_contactus">Contact Us</string>
    <string name="include_main_image_settings">Settings Icon</string>
    <string name="include_main_settings">Settings</string>
    <string name="include_main_menu_creditcard">Credit Card</string>
    <string name="include_main_image_sale">Sale Icon</string>
    <string name="include_main_image_void">Void Icon</string>
    <string name="include_main_image_settlement">Settlement Icon</string>
    <string name="include_main_image_report">Report Image</string>
    <string name="include_main_menu_sale">Sale</string>
    <string name="include_main_menu_void">Void</string>
    <string name="include_main_menu_settlement">Settlement</string>
    <string name="include_main_menu_report">Report</string>
    <string name="include_main_companyname">Bangkok Payment Solutions Co., Ltd.</string>
    <string name="include_sale_currency">Base Amount: THAI BAHT</string>
    <string name="include_sale_amount">0,000,000,000.00</string>
    <string name="include_sale_enterpanmanually">Enter Credit Card Number Manually</string>
    <string name="include_sale_image_creditcardswipe">Credit Card Swipe Icon</string>
    <string name="include_sale_image_creditcardinsert">Credit Card Insert Icon</string>
    <string name="include_sale_image_creditcardtap">Credit Card Tap Icon</string>
    <string name="parameter_numpad_amount_length">numpad.amount.length</string>
    <string name="parameter_panpad_pan_minimum_length">panpad.pan.minimum.length</string>
    <string name="parameter_panpad_pan_maximum_length">panpad.pan.maximum.length</string>
    <string name="parameter_panpad_exp_minimum_length">panpad.exp.minimum.length</string>
    <string name="parameter_panpad_exp_maximum_length">panpad.exp.maximum.length</string>
    <string name="parameter_sale_double_value">sale.double.value</string>
    <string name="parameter_sale_string_value">sale.string.value</string>
    <string name="parameter_sale_bytearray_value">sale.bytearray.value</string>
    <string name="return_numpad_double_value">numpad.double.value</string>
    <string name="return_numpad_string_value">numpad.string.value</string>
    <string name="return_numpad_bytearray_value">numpad.bytearray.value</string>
    <string name="return_panpad_pan_string_value">panpad.pan.string.value</string>
    <string name="return_panpad_pan_bytearray_value">panpad.pan.bytearray.value</string>
    <string name="return_panpad_exp_string_value">panpad.expiry.string.value</string>
    <string name="return_panpad_exp_bytearray_value">panpad.expiry.bytearray.value</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>
    <string name="num_00_thb">00 THB</string>
    <string name="dateTime">Date/Time</string>
    <string name="placeholder">:)</string>
    <string name="sec">s</string>
    <string name="ad">Ad</string>
    <string name="ad_widget_label">Ad</string>
    <string name="amount_widget_label">Amount</string>
    <string name="go_system_setting_date">Go System Time Setting</string>
    <string name="go_system_settings">Go System Settings</string>
    <string name="enter_label">Enter</string>
    <string name="default_carrier_name">Carrier:</string>
    <string name="default_app_version">Version:</string>
    <string name="base_amount">Base Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="trans_oriDate">Original Transaction Date</string>
    <string name="has_trans_for_settle">Please Settle Firstly</string>
    <string name="amount_default">0</string>
    <string name="quick_pass_sale_free_pin">Sale by PIN</string>
    <string name="demo_mode">****Demo Mode****</string>
    <string name="paperless">Paperless</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_result">PROTOCOL RESULT</string>
    <string name="e_signature">E-Signature</string>
    <string name="kerry_api">Kerry API</string>
    <string name="grand_total">Grand Total</string>
    <string name="camera_setting">Camera Setting</string>
    <string name="linkpos_comm_type">Comm Type</string>
    <string name="qr_barcode">QR and Barcode</string>
    <string name="kiosk_mode">Kiosk Mode Setting</string>
    <string name="contactless">Contactless</string>
    <string name="enable_keyin">Key Input</string>
    <string name="enable_loggly">Enable Loggly</string>
    <string name="void_with_stand">Void with Stand</string>
    <string name="external_devices">External Devices</string>
    <string name="support_sp200">Support SP200</string>
    <string name="dynamic_offline_mode">Dynamic Offline options</string>
    <string name="dynamic_offline_show_menu">Show Dynamic offline menu</string>
    <string name="unable_to_disable_dynamic_offline">Unable to hide menu icon\nDynamic Offline was still activated</string>
    <string name="edc_ctls_trans_limit">Contactless Trans. Limit</string>
    <string name="edc_amount_limit">Amount Limit</string>
    <string name="edc_amount_limit_max">Max</string>
    <string name="edc_amount_limit_min">Min</string>
    <string name="edc_duo_brand_app_force_auto_sel">Force Duo-Brands card App selection</string>
    <string name="edc_duo_brand_app_force_auto_sel_label">Force selection (Enable/Disable)</string>
    <string name="edc_qr_credit_missing_focrce_settle_time">Force-settlement-time was missing</string>
    <string name="edc_qr_credit_focrce_settle_time_check_failed">Failed to execute force-settle-time check</string>
    <string name="edc_tip_adjust_title">Tip Adjustment</string>
    <string name="enable_preauth">Pre-Authorize</string>
    <string name="menu_select_merchant">Merchant</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_void">Void</string>
    <string name="menu_qr_prompt">PromptPay</string>
    <string name="menu_qr_thai_qr">THAI QR PAYMENT</string>
    <string name="menu_qr_prompt_void">PromptPay Void</string>
    <string name="menu_qr_sale">QR Sale</string>
    <string name="menu_qr_void">QR Void</string>
    <string name="bss_reader_key_test">Test Key</string>
    <string name="bss_reader_key_production">Production Key</string>
    <string name="bss_reader_key">Reader Key</string>
    <string name="history_detail_type">Type</string>
    <string name="history_detail_issuer">Card Type</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_stan_no">STAN NO.</string>
    <string name="history_detail_trace_no">TRACE NO.</string>
    <string name="history_detail_dcc_amt">DCC Amount</string>
    <string name="prompt_input_transno">Please Enter Original Trace NO.</string>
    <string name="prompt_get_last">Click OK to Get Last Transaction</string>
    <string name="rabbit_reader_key">Please select reader key.</string>
    <string name="remark">Remark</string>
    <string name="dialog_ok">OK</string>
    <string name="plz_enter_pwd">Please Enter Password</string>
    <string name="image_desc"> </string>
    <string name="label_type">Type</string>
    <string name="label_card_num">Number</string>
    <string name="label_card_exp">Expiry</string>
    <string name="label_redeem_discount_type">Dis %</string>
    <string name="label_product">Product</string>
    <string name="label_redeem_quantity">Quantity</string>
    <string name="label_redeem_points">Points</string>
    <string name="label_amount">Amount</string>
</resources>