<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:paddingStart="@dimen/space_horizontal"
    android:paddingEnd="@dimen/space_horizontal"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/carrier_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="start"
                android:background="@color/primary"
                android:text="@string/default_carrier_name"
                android:textSize="@dimen/font_size_hint"
                android:textColor="@color/background"/>

        <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:background="@color/primary"
                android:text="@string/default_app_version"
                android:textSize="@dimen/font_size_hint"
                android:textColor="@color/background" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_large"
        android:layout_marginBottom="@dimen/space_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/k_logo1"
            android:contentDescription="@string/image_desc" />
    </RelativeLayout>

    <EditText
        android:id="@+id/operator_pwd_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:maxLength="8"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="numberPassword"
        android:textSize="@dimen/font_size_big"
        android:textColor="@color/primary_text_dark"
        android:hint="@string/plz_enter_pwd"
        android:textColorHint="@color/secondary_text_dark"
        android:layout_marginTop="@dimen/space_vertical"
        android:layout_marginBottom="@dimen/space_vertical_small"/>

    <View style="@style/LongLine" />
</LinearLayout>