<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_vertical">

        <TextView
            android:id="@+id/redeem_card_type_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_type"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_card_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_card_num_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_card_num"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_card_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_horizontal_small"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_card_exp_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_card_exp"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_card_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/discount_type_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_discount_type_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_redeem_discount_type"
            android:textSize="@dimen/font_edit_text" />

        <Spinner
            android:id="@+id/redeem_discount_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_product"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_qty_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_redeem_quantity"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/points_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_points_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_redeem_points"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="9"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/redeem_amount_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:text="@string/label_amount"
            android:textSize="@dimen/font_edit_text" />

        <EditText
            android:id="@+id/redeem_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/font_edit_text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/redeem_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/space_vertical"
            android:background="@drawable/btn_bg_light"
            android:text="@string/dialog_ok"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/font_button" />
    </LinearLayout>

</LinearLayout>